<resources>
    <string name="app_name">Game Centre</string>
    <string name="load_saved_game">Load Game</string>
    <string name="new_game">New Game</string>
    <string name="welcome_to_sliding_tiles_n_a_puzzle_game_where_you_must_arrange_the_numbers_in_the_correct_order">Welcome To Sliding Tiles   A Puzzle Game where you must arrange the numbers in the correct order</string>
    <string name="save_game">Save Game</string>
    <string name="saved_game">SAVED</string>
    <string name="scoreBoard">Scoreboard</string>

    <!-- Strings related to Settings -->s
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_complexity">Complexity</string>
    <string name="pref_header_load_image">Background</string>

    <string name="pref_title_default_image">Use default background</string>

    <string name="pref_title_size">Size</string>
    <string-array name="pref_size_list_titles">
        <item>3 x 3</item>
        <item>4 x 4</item>
        <item>5 x 5</item>
    </string-array>
    <string-array name="pref_size_list_values">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pref_title_load_image">Load Image</string>
    <string name="undo">Undo</string>

    <string name="pref_title_undo">Maximum Undo</string>
    <string-array name="pref_undo_list_titles">
        <item>3 Times</item>
        <item>4 Times</item>
        <item>5 Times</item>
    </string-array>
    <string-array name="pref_undo_list_values">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="sliding_tiles_name">Magic Square</string>
    <string name="currentScore">Current Score</string>
    <string name="grade1">Grade1</string>
    <string name="grade2">Grade2</string>
    <string name="grade3">Grade3</string>
    <string name="slidingtiles">SlidingTiles</string>
    <string name="messagestatusscore">This is your three highest scores</string>
    <string name="ScoreBoard">ScoreBoard</string>
    <string name="worldgrade1">WorldGrade1</string>
    <string name="worldgrade2">WorldGrade2</string>
    <string name="worldgrade3">WorldGrade3</string>
    <string name="worldgrade4">WorldGrade4</string>
    <string name="loginmessage">Log in to launch the game centre</string>
    <string name="loginemail">Email</string>
    <string name="loginbutton">Log In</string>
    <string name="loginregister">Register</string>
    <string name="password">Password</string>
    <string name="registernickname">Nickname</string>
    <string name="leaderboard_button">LeaderBoard</string>string>
    <string name="Logincheckbox">Remember the username and password</string>
    <string name="Menus">Menus</string>
    <string name="title_activity_new_centre">NewCentreActivity</string>
    <string name="myscoreboard">Your highest scores</string>
    <string name="LeaderBoardButton">LeaderBoard</string>
    <string name="two048">2048</string>

</resources>
