<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ScoreBoardActivity">

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="479dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userGrade1"
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:text="@string/worldgrade1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/userGrade2"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:text="@string/worldgrade2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/userGrade3"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:text="@string/worldgrade3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/userGrade4"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:text="@string/worldgrade4"
            android:textSize="18sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>