<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="fall2018.csc2017.slidingtiles.SlidingTiles.StartingActivityST">

    <Button
        android:id="@+id/StartButton"
        android:layout_width="216dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@color/colorMagicPrimary"
        android:text="@string/new_game"
        android:textSize="20dp"
        android:textColor="@color/colorMagicAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:text="@string/sliding_tiles_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:textColor="@color/colorMagicPrimary"
        android:textSize="70dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/LoadButton"
        android:layout_width="216dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@color/colorMagicPrimary"
        android:text="@string/load_saved_game"
        android:textColor="@color/colorMagicAccent"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartButton" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="216dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@color/colorMagicPrimary"
        android:text="@string/save_game"
        android:textColor="@color/colorMagicAccent"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScoreBoardButton" />

    <Button
        android:id="@+id/UndoButton"
        android:layout_width="216dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@color/colorMagicPrimary"
        android:text="@string/undo"
        android:textColor="@color/colorMagicAccent"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/SettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SaveButton"
        app:layout_constraintVertical_bias="0.14" />

    <Button
        android:id="@+id/ScoreBoardButton"
        android:layout_width="216dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@color/colorMagicPrimary"
        android:text="@string/ScoreBoard"
        android:textColor="@color/colorMagicAccent"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoadButton" />

    <Button
        android:id="@+id/SettingsButton"
        android:layout_width="216dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/btn_style"
        android:backgroundTint="@color/colorMagicPrimary"
        android:text="@string/settings"
        android:textColor="@color/colorMagicAccent"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>